# wg-bond

./: .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.json  default.nix  flake.nix  shell.nix  wg-bond.json
.github/workflows/: build_nix.yaml  build_nix.yml  flakehub-publish-tagged.yml
multiarch/: flake.nix
nix/: sources.json
src/: main.rs
src/configs/: conf.rs  hosts.rs  ipop.rs  macros.rs  mod.rs  nix.rs  nixops.rs  qr.rs  relations.rs  utils.rs
src/plugins/: plugin.rs
src/wg_tools/: mod.rs
