[package]
name = "wg-bond"
version = "0.3.0"
authors = ["Vladimir Serov <me@cab404.ru>"]
edition = "2018"
license = "GPL-3.0+"
description = "Wireguard configuration manager"
readme = "README.md"
repository = "https://gitlab.com/cab404/wg-bond"
homepage = "https://gitlab.com/cab404/wg-bond"
keywords = ["wireguard", "networking", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
url = "2.1.1"
rand = "0.8.5"
sha3 = "0.10.1"
base64 = "0.13.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

strum = "0.24.0"
strum_macros = "0.24.0"

rand_core = {version = "0.5", default-features = false, features = ["getrandom"]}
x25519-dalek = "1"

qrcode = { version = "0.12", default-features = false }
ipnetwork = "0.19.0"
clap = "3.1.16"
pretty_env_logger = "0.4"

petgraph = "0.4.7"
